references local tone.js

--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@ features to come:
     <a href="?e=run on the spot,jumping jacks,planks&t=40&b=20&w=30">3</a>
   </p>
 
-  <script type="text/javascript" src="https://tonejs.github.io/build/Tone.min.js"></script>
-
+  <script type="text/javascript" src="public/Tone.js-master/build/Tone.min.js"></script>
 
 <script>
 
