removes empty exercises caused by comma confusion
just used this today and had an empty exercise so removing

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ features to come:
     }
 
     function setWorkoutParameters(){
-      todayExercises = document.getElementById("exercises").value.split(",");
+      todayExercises = document.getElementById("exercises").value.split(",").filter(function (el) {return el != "";});
       exerciseLength = parseInt(document.getElementById("exerciseLength").value);
       breakLength = parseInt(document.getElementById("breakLength").value);
       workoutLength = parseInt(parseFloat(document.getElementById("workoutLength").value)*60);
