adds a title for seo i guess

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ features to come:
   choose how many pips (and set pips lower if people do super short exercises)
 
 -->
+  <title>hiitman2000 hiitman 2000</title>
 <head>
   <style>
     div {
